fixed big where whiteboard menu would not load on mobile browsers

--- a/src/components/whiteboard/whiteboard.module.css
+++ b/src/components/whiteboard/whiteboard.module.css
@@ -15,7 +15,7 @@
   width: fit-content;
   overflow-y: hidden;
   user-zoom:none;
-  position: relative;
+  
 }
 
 .menusContainer svg:hover {
